--- a/src/main/res/values/strings.xml
+++ b/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">Quick Settings Wakelock Tile</string>
     <string name="qstile_name">Wakelock</string>
+    <string name="qstile_active">Wakelock is held</string>
+    <string name="qstile_description">Screen will stay on.</string>
 </resources>
